Fix text coloring and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,15 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
+.nav-item.nav-link {
+  border-color: rgb(155, 155, 155) !important;
+  border-width: 0.1px !important;
+  border-left: none !important;
+  color: #6c757d !important;
+  font-weight: bolder;
+}
+
 .nav-link.active {
   background-color: rgb(155, 155, 155) !important;
+  color: black !important;
 }
